# mcu

./: .gitignore
01-blink/: CMakeLists.txt  main.c
02-control/: CMakeLists.txt  main.c
02-control/led-task/: led-task.c  led-task.h
02-control/stdio-task/: stdio-task.h
02-echo/: CMakeLists.txt  main.c
02-on-off/: CMakeLists.txt  main.c  on_off.py
02-on-off/led/: led.c  led.h
02-printf/: CMakeLists.txt  main.c
03-adc/: CMakeLists.txt  get_adc.py  get_telemetry.py  main.c
03-adc/adc-task/: adc-task.c  adc-task.h
03-adc/protocol-task/: protocol-task.c
03-adc/stdio-task/: stdio-task.c
